# movie-frame-extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/movie_frame_extractor_xethhung12/: __init__.py  extractor.py  getInfo.py
src/movie_frame_extractor_xethhung12.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
